--- a/index.html
+++ b/index.html
@@ -7,5 +7,13 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
+    <p><s>Recipes</s></p>
+    <ul>
+      <li>
+        <a href="recipes/stir‑fried-tomato-and-scrambled-eggs.html"
+          >Stir-fried tomato and scrambled eggs</a
+        >
+      </li>
+    </ul>
   </body>
 </html>
