Create the recipe page content for tomato and eggs
Add a image, a description, ingredients and the cooking steps for Stir-fried
tomato and scrambled eggs.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <p><s>Recipes</s></p>
+    <p><strong>Recipes</strong></p>
     <ul>
       <li>
         <a href="recipes/stir‑fried-tomato-and-scrambled-eggs.html"
