--- a/recipes/stir‑fried-tomato-and-scrambled-eggs.html
+++ b/recipes/stir‑fried-tomato-and-scrambled-eggs.html
@@ -2,11 +2,80 @@
 <html lang="en">
   <head>
     <meta charset="UTF 8" />
-    <meta name="viewport" content="width=device width, initial scale=1.0" />
+    <meta name="viewport" content="width=device width, initial scale= 1.0" />
     <title>Stir-fried tomato and scrambled eggs</title>
   </head>
   <body>
     <h1>Stir-fried tomato and scrambled eggs</h1>
+    <img
+      src="../imgaes/tomato-eggs.jpeg"
+      alt="Stir-fried tomato and scrambled eggs with chives on top"
+    />
+    <h2>Description</h2>
+    <p>
+      Stir-fried tomato and scrambled eggs is a classic Chinese home-style dish
+      beloved for its simplicity, vibrant color, and comforting flavor. The dish
+      features soft scrambled eggs and juicy tomatoes stir-fried together with a
+      touch of salt, sugar, and sometimes scallions or garlic. The eggs are
+      first cooked until fluffy and golden, then briefly set aside while the
+      tomatoes are quickly stir-fried to release their tangy-sweet juices.
+      Everything is then combined, creating a warm, slightly saucy mixture that
+      pairs perfectly with steamed rice.
+    </p>
+    <p>
+      Despite its humble ingredients, this dish holds a nostalgic place in many
+      Chinese households, often being one of the first recipes learned by young
+      cooks. It strikes a balance between sweet and savory, soft and juicy,
+      making it appealing to people of all ages. Whether served at lunch or
+      dinner, stir-fried tomato and scrambled eggs is a timeless comfort food
+      that brings a taste of home.
+    </p>
+    <h2>Ingredients</h2>
+    <ul>
+      <li>Eggs – 3 to 4 large</li>
+      <li>Tomatoes – 2 medium (or 3 small), ripe</li>
+      <li>Salt – ½ tsp (to taste)</li>
+      <li>Sugar – ½ tsp (optional, balances acidity)</li>
+      <li>Cooking oil – 1 to 2 tbsp (vegetable or peanut oil)</li>
+      <li>Scallions – 1 stalk, chopped (optional, for added aroma)</li>
+      <li>Garlic – 1 clove, minced (optional, for extra flavor)</li>
+      <li>Water – 1 to 2 tbsp (optional, to make it saucier)</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+      <li>Prep ingredients</li>
+      <ul>
+        <li>Beat 3–4 eggs with a pinch of salt.</li>
+        <li>Cut 2 tomatoes into wedges.</li>
+        <li>(Optional: mince garlic, chop scallions.)</li>
+      </ul>
+      <li>Cook the eggs:</li>
+      <ul>
+        <li>Heat oil in a pan.</li>
+        <li>Pour in the beaten eggs and scramble gently until just set.</li>
+        <li>Remove eggs and set aside.</li>
+      </ul>
+      <li>Cook the tomatoes:</li>
+      <ul>
+        <li>Add a bit more oil if needed.</li>
+        <li>
+          Stir-fry tomatoes over medium heat until soft and juicy (2–3 minutes).
+        </li>
+        <li>Add salt and a little sugar to taste.</li>
+      </ul>
+      <li>Combine and finish:</li>
+      <ul>
+        <li>Return eggs to the pan.</li>
+        <li>
+          Stir-fry everything together for 30–60 seconds until well mixed.
+        </li>
+        <li>
+          (Optional: add a splash of water or scallions for extra flavor.)
+        </li>
+      </ul>
+      <li>Serve hot with steamed rice. Done!</li>
+    </ol>
     <a href="../index.html">Home</a>
+    <li></li>
   </body>
 </html>
