--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
           >Stir-fried tomato and scrambled eggs</a
         >
       </li>
+      <li><a href="recipes/ma-po-tofu.html">Ma Po Tofu</a></li>
     </ul>
   </body>
 </html>
