--- a/recipes/ma-po-tofu.html
+++ b/recipes/ma-po-tofu.html
@@ -8,7 +8,7 @@
   <body>
     <h1>Ma Po Tofu</h1>
     <img
-      href="../imgaes/ma-po-tofu.jpg"
+      src="../imgaes/ma-po-tofu.jpg"
       alt="Spicy tofu cooked with minced pork, with chives and chilles on top."
     />
     <h2>Description</h2>
