--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     <ul>
       <li>
         <a href="recipes/stir‑fried-tomato-and-scrambled-eggs.html"
-          >Stir-fried tomato and scrambled eggs</a
+          >Stir-fried Tomato and Ccrambled Eggs</a
         >
       </li>
       <li><a href="recipes/ma-po-tofu.html">Ma Po Tofu</a></li>
+      <li><a href="recipes/kung-pao-chicken.html">Kung Pao Chicken</a></li>
     </ul>
   </body>
 </html>
