Add width to three recipe images

--- a/recipes/ma-po-tofu.html
+++ b/recipes/ma-po-tofu.html
@@ -10,6 +10,7 @@
     <img
       src="../imgaes/ma-po-tofu.jpg"
       alt="Spicy tofu cooked with minced pork, with chives and chilles on top."
+      width="500"
     />
     <h2>Description</h2>
     <p>
