--- a/recipes/stir‑fried-tomato-and-scrambled-eggs.html
+++ b/recipes/stir‑fried-tomato-and-scrambled-eggs.html
@@ -10,6 +10,7 @@
     <img
       src="../imgaes/tomato-eggs.jpeg"
       alt="Stir-fried tomato and scrambled eggs with chives on top"
+      width="500"
     />
     <h2>Description</h2>
     <p>
