--- a/recipes/kung-pao-chicken.html
+++ b/recipes/kung-pao-chicken.html
@@ -10,6 +10,7 @@
     <img
       src="../imgaes/kung-pao-chicken.jpeg"
       alt="Kung Pao Chicken, a vibrant and flavorful Sichuan stir-fry dish"
+      width="500"
     />
     <h2>Description</h2>
     <p>
