Add css for index.html

--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Recipes</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <h1>Odin Recipes</h1>
     <p><strong>Recipes</strong></p>
     <ul>
+      <li><a href="recipes/ma-po-tofu.html">Ma Po Tofu</a></li>
+      <li><a href="recipes/kung-pao-chicken.html">Kung Pao Chicken</a></li>
       <li>
         <a href="recipes/stir‑fried-tomato-and-scrambled-eggs.html"
           >Stir-fried Tomato and Ccrambled Eggs</a
         >
       </li>
-      <li><a href="recipes/ma-po-tofu.html">Ma Po Tofu</a></li>
-      <li><a href="recipes/kung-pao-chicken.html">Kung Pao Chicken</a></li>
     </ul>
   </body>
 </html>
