--- a/recipes/ma-po-tofu.html
+++ b/recipes/ma-po-tofu.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ma Po Tofu／Spicy tofu with minced pork</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <h1>Ma Po Tofu</h1>
