--- a/recipes/stir‑fried-tomato-and-scrambled-eggs.html
+++ b/recipes/stir‑fried-tomato-and-scrambled-eggs.html
@@ -4,11 +4,12 @@
     <meta charset="UTF 8" />
     <meta name="viewport" content="width=device width, initial scale= 1.0" />
     <title>Stir-fried tomato and scrambled eggs</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <h1>Stir-fried tomato and scrambled eggs</h1>
     <img
-      src="../imgaes/tomato-eggs.jpeg"
+      src="../imgaes/tomato-eggs.jpg"
       alt="Stir-fried tomato and scrambled eggs with chives on top"
       width="500"
     />
